<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.RegisterActivity">

    <TextView
        android:id="@+id/tv_register"
        fontPath="@string/font_lato_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/register_title"
        android:textColor="@color/black"
        android:textSize="30dp"
        app:layout_marginTopPercent="9%" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/rtil_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_register"
        android:hint="@string/login_username"
        android:textColorHint="@color/purpleyGrey"
        app:layout_marginTopPercent="10%">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/ret_username"
            style="@style/LoginField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dustyOrange"
            android:inputType="textNoSuggestions" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/rtil_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rtil_username"
        android:hint="@string/login_password"
        android:textColorHint="@color/purpleyGrey"
        app:layout_marginTopPercent="4%">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/ret_password"
            style="@style/LoginField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dustyOrange"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rtil_password"
        android:text="@string/photo_upload"
        android:theme="@style/PinkishGreyButton"
        app:layout_marginTopPercent="6%"/>

    <Button
        android:id="@+id/btn_register_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_photo"
        android:text="@string/register_submit"
        android:theme="@style/OrangeButton"
        app:layout_marginTopPercent="6%" />


</android.support.percent.PercentRelativeLayout>
